@@ -1,11 +1,0 @@
-DEFINED_PHASES=configure install
-DEPEND=test? ( dev-cpp/gtest )
-DESCRIPTION=MessagePack is a binary-based efficient data interchange format
-EAPI=3
-HOMEPAGE=http://msgpack.org/
-IUSE=static-libs test
-KEYWORDS=~amd64 ~x86 ~x86-fbsd
-LICENSE=Apache-2.0
-SLOT=0
-SRC_URI=http://msgpack.org/releases/cpp/msgpack-0.5.6.tar.gz
-_md5_=85e8369e8b44e2915ed874c69e17ff0c
