@@ -1,0 +1,12 @@
+DEFINED_PHASES=configure install prepare
+DEPEND=test? ( dev-cpp/gtest )
+DESCRIPTION=MessagePack is a binary-based efficient data interchange format
+EAPI=5
+HOMEPAGE=http://msgpack.org/
+IUSE=static-libs test
+KEYWORDS=~amd64 ~x86 ~x86-fbsd ~amd64-linux ~x86-linux
+LICENSE=Apache-2.0
+SLOT=0
+SRC_URI=http://msgpack.org/releases/cpp/msgpack-0.5.6.tar.gz
+_eclasses_=eutils	40081e8c7e7f7c4f9db349a1d6d52925	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
+_md5_=3269fc03ca99e3e773097641f8db7981
